# ADScan

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  adscan.py  conftest.py  pyproject.toml  requirements.txt  scoring.toml
checks/: __init__.py  check_account_hygiene.py  check_acl_permissions.py  check_adcs.py  check_adcs_ldap_backup.py  check_adminsdholder_acl.py  check_audit_policy.py  check_bloodhound.py  check_computer_password_age.py  check_constrained_delegation.py  check_dangerous_constrained_delegation.py  check_deprecated_os.py  check_dns_infrastructure.py  check_domain_controllers.py  check_domain_trusts.py  check_fine_grained_password_policy.py  check_foreign_security_principals.py  check_gpo.py  check_gpp_cpassword.py  check_kerberos.py  check_laps.py  check_laps_coverage.py  check_legacy_frs_sysvol.py  check_legacy_protocols.py  check_misc_hardening.py  check_nopac.py  check_optional_features.py  check_orphaned_subnets.py  check_password_policy.py  check_passwords_in_descriptions.py  check_pre2k.py  check_pre_windows_2000.py  check_print_spooler.py  check_privileged_accounts.py  check_protected_admin_users.py  check_protected_users_group.py  check_protocol_security.py  check_rbcd_domain_dcs.py  check_rc4_encryption.py  check_replication.py  (+6 more)
docs/: REFERENCE.md  scoring_mockup.html
lib/: __init__.py  audit_log.py  connector.py  debug_log.py  report.py  scoring.py  spinner.py  tools.py
tests/: test_check_adminsdholder_acl.py  test_check_bloodhound.py  test_check_fine_grained_password_policy.py  test_check_print_spooler.py  test_check_webclient_webdav.py  test_connector_resolve_sid.py  test_preflight.py
verifications/: __init__.py  verify_account_lockout.py  verify_acl_permissions.py  verify_adminsdholder.py  verify_as_rep.py  (+59 more)
