[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adscan"
version = "1.1.0"
description = "Modular Active Directory vulnerability scanner — LDAP/LDAPS/SMB, 36 security checks, HTML report with risk score"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "ldap3>=2.10.0rc1",
    "impacket==0.13.0",
    "cryptography==44.0.3",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.4.1",
    "dnspython==2.8.0",
    "requests==2.32.5",
    "pyOpenSSL==25.1.0",
    "defusedxml==0.7.1",
    "python-docx>=1.1.2",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
kerberos = ["gssapi"]
dev      = ["pytest>=8.0", "pytest-cov", "ruff", "mypy", "tomli; python_version < '3.11'"]

# NOTE: certipy-ad, netexec, and pre2k are managed as isolated tools via
#   uv tool install certipy-ad     # ADCS/PKI scanner
#   uv tool install netexec        # SMB signing/SMBv1 detection (nxc command)
#   uv tool install pre2k          # Pre-Windows 2000 computer account tester
# Run `python adscan.py --setup-tools` to install them automatically.

[project.scripts]
adscan = "adscan:main"

[tool.setuptools]
py-modules = ["adscan"]

[tool.setuptools.packages.find]
include = ["lib*", "checks*", "verifications*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["lib", "checks"]
omit = ["verifications/*", "tests/*"]
